package io.github.sttanyanz.chesstc.model.exceptions;

public abstract class AbstractCTCException extends Exception{
}
