package io.github.sttanyanz.chesstc.model.exceptions;

public class GetPercentageWhenTotalTimeIsZeroException extends AbstractCTCException{
}
