package io.github.sttanyanz.chesstc.model.exceptions;

public class NegativeInputTimeException extends AbstractCTCException{
}
