package io.github.sttanyanz.chesstc.model.exceptions;

public class NegativeTimeSpentException extends AbstractCTCException {
}
