package io.github.sttanyanz.chesstc.model.exceptions;

public class StudyObjectIndexOutOfBoundsException extends AbstractCTCException{
}
