@startuml
skinparam defaultFontSize 10
skinparam BackgroundColor DimGray
skinparam ClassAttributeFontColor LightGreen
skinparam PackageFontColor coral
skinparam ClassFontColor coral
skinparam package {
BackgroundColor #403F49/#604F59
}
skinparam class {
BackgroundColor #282C34/#483C44
}
skinparam groupInheritance 4

package chesstc {
    package model {
        package exceptions {
            class AbstractCTCException
            class NegativeTimeSpentException
            class NegativeInputTimeException
            class GetPercentageWhenTotalTimeIsZeroException
            class StudyObjectIndexOutOfBoundsException

            AbstractCTCException <|-- NegativeInputTimeException
            AbstractCTCException <|-- NegativeTimeSpentException
            AbstractCTCException <|-- GetPercentageWhenTotalTimeIsZeroException
            AbstractCTCException <|-- StudyObjectIndexOutOfBoundsException
        }

        class StudyObject {
            + getTimeSpent() : int
            + addTime(time : int) : void
            + setTime(time : int) : void
        }

        class Session {
            + getObjects() : StudyObject[]
            + getObject(studyObjectID : int) : StudyObject
            + getPercentage(studyObjectID : int) : float
            + getTotalTimeSpent() : int
            + reset() : void
        }

    }

    package controller {
        class SetTimeController {
            + spendTime(studyObject : StudyObject, time : int) : void
            + setTime(studyObject : StudyObject, time : int) : void
            + reset() : void
        }
    }

    package view {
        class ConsoleView {
            + show(session : Session) : void
            + consoleMenu((session : Session) : void
            - spendTime(session : Session) : void
            - setTime(session : Session) : void
            - reset(session : Session) : void
        }
    }
}

@enduml